--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.wallpaper"
-        minSdk 24
+        minSdk 26
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,11 @@ dependencies {
     implementation libs.retrofit
     implementation libs.converter.moshi
     implementation libs.moshi
+
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
+
+    implementation libs.jsoup
 }
 
 hilt {
