--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.cardview
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -54,6 +55,13 @@ dependencies {
     annotationProcessor libs.lombok
 
     implementation libs.jsoup
+    
+    // SwipeRefreshLayout (needed for layout)
+    implementation libs.swiperefreshlayout
+    
+    // Image loading
+    implementation libs.glide
+    annotationProcessor libs.glide.compiler
 }
 
 hilt {
