feat: add wallpaper viewer and cropping functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,12 @@ dependencies {
     // Image loading
     implementation libs.glide
     annotationProcessor libs.glide.compiler
+    
+    // Image cropping for wallpaper setting
+    implementation 'com.vanniktech:android-image-cropper:4.6.0'
+    
+    // Zoom/pan support for full-screen wallpaper view
+    implementation 'io.getstream:photoview:1.0.3'
 }
 
 hilt {
