--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
         android:name=".MyApp"
@@ -29,6 +30,13 @@
             android:name=".ui.activity.SearchActivity"
             android:exported="false"
             android:parentActivityName=".ui.activity.MainActivity" />
+        <activity
+            android:name=".ui.activity.WallpaperViewerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.WallpaperCropActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.activity.WallpaperViewerActivity" />
     </application>
 
 </manifest>
