--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".ui.activity.SearchActivity"
             android:exported="false"
-            android:parentActivityName=".ui.activity.MainActivity" />
+            android:parentActivityName=".ui.activity.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.activity.WallpaperViewerActivity"
             android:exported="false" />
