--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.SearchActivity"
+            android:name=".ui.activity.SearchFilterActivity"
             android:exported="false"
             android:parentActivityName=".ui.activity.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activity.SearchResultsActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.activity.SearchFilterActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.activity.WallpaperViewerActivity"
