--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,20 @@ dependencies {
     
     // Zoom/pan support for full-screen wallpaper view
     implementation 'io.getstream:photoview:1.0.3'
+
+    def room_version = "2.7.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
+    implementation "androidx.room:room-guava:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
+    
+    // RxJava3
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
 }
 
 hilt {
